--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,13 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: test
+        args: --release
 
     - name: Run
       uses: actions-rs/cargo@v1
       with:
         command: run
+        args: --release
 
     - name: Check style
       uses: actions-rs/cargo@v1
